# gds-eligibility-agentic-backend

./: .dockerignore  .editorconfig  .gitignore  .terraform.lock.hcl  CRUSH.md  Dockerfile  README.md  bedrock.tf  docker-compose.yml  frontend.tf  iam.tf  main.tf  outputs.tf  s3.tf  statePromptTesting.sh  terraform.tfstate  terraform.tfstate.backup  variables.tf
prototypes/eligibility_via_mcp/: README.md  generate_eligibility_service.sh  pyproject.toml  run_tests.sh
prototypes/eligibility_via_mcp/src/: .env_example
prototypes/eligibility_via_mcp/src/agents/eligibility/: agent.py
prototypes/eligibility_via_mcp/src/agents/eligibility_service_generator/: agent.py  system_prompt.md
prototypes/eligibility_via_mcp/src/mcp_server/: registered_eligibility_checker_tools.py  registered_eligibility_implication_tools.py  server.py
prototypes/eligibility_via_mcp/src/mcp_server/models/: eligibility_check_models.py
prototypes/eligibility_via_mcp/src/runners/: run_script_base.sh
prototypes/eligibility_via_mcp/tests/: test_pip.py  test_skilled_worker_visa.py  test_universal_credit.py
prototypes/eligibility_via_mcp/tests/scenario/: base.py  pip.py  runner.py  skilled_worker_visa.py  universal_credit.py
src/adk/: Dockerfile  actor_runner.py  confirmation_analysis.py  docker-compose.yml  judge_runner.py  pyproject.toml  test_analysis.py  test_runner.py
src/adk/.testOutputs/child_benefit/2025-12-09T17:36:25.518046/: 0
src/adk/.testOutputs/child_benefit/2025-12-10T10:34:48.626756/: Permutation1.out
src/adk/.testOutputs/child_benefit/2025-12-10T11:41:19.984181/: Permutation1.out
src/adk/.testOutputs/child_benefit/2025-12-10T11:52:41.432111/: Permutation1.out
src/adk/.testOutputs/child_benefit/2025-12-10T11:54:24.598054/: Permutation1.out
src/adk/.testOutputs/child_benefit/2025-12-10T12:03:54.079271/: Permutation1.out
src/adk/.testOutputs/child_benefit/2025-12-10T12:18:47.896171/: Permutation1.out
src/adk/.testOutputs/child_benefit/2025-12-10T12:21:19.744086/: Permutation1.out
src/adk/deterministic_evals/: child_benefit.py
src/adk/eligibility/: agent.json  agent.py
src/adk/evaluation_judge/: __init__.py  agent.py
src/adk/fishing_licence/: agent.json  agent.py
src/adk/gds-eligibility/: agent.py
src/adk/gds_eligibility/: agent.py  test_agent.py
src/adk/pip/: agent.json  agent.py
src/adk/root/: agent.py
src/adk/sequential_agent/: agent.py
src/adk/sequential_agent/prompts/: __init__.py  elicitation_agent.md  personal_independence_payment_agent.md  prompt.py  universal_credit_agent.md  user_agent.md
src/adk/structured_specification/: agent.py  validate.py
src/adk/tax_code/: agent.py
src/adk/taxation/: agent.json  agent.py
src/adk/test_case_generator/: data_dictionary.json  generate_test_cases.py  systematic_cases.json
src/adk/tools/: test_web_scraper.py  web_scraper.py
src/adk/userTesting3/: agent.py
src/strands/: .bedrock_agentcore.yaml  .envrc  main.py  pyproject.toml
src/strands/.bedrock_agentcore/Bond/: Dockerfile
(+7609 files in other folders)
