[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eligibility_check_functions"
version = "0.1.0"
description = "Eligibility checks powered by pure Python functions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
  { name = "Martyn Lloyd-Kelly", email = "martyn.lloyd-kelly@digital.cabinet-office.gov.uk" }
]

# Your project's core dependencies (what gets installed when someone installs your package)
dependencies = [
  "pydantic>=2.12.5",
  "mcp",
  "mcp[cli]",
  "httpx>=0.28.1",
  "strands-agents>=1.28.0",
  "strands-agents-tools>=0.2.21",
  "strands-agents-builder>=0.1.10",
  "langwatch-scenario>=0.7.16",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pandas>=2.3.3",
  "python-dotenv>=1.2.1",
]
