[project]
name = "adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.22",
    "boto3>=1.40.70",
    "fastapi==0.118.3",
    "google-adk",
    "litellm>=1.79.3",
    "pydantic>=2.11.1,<3",
]


[tool.uv.sources]
google-adk = { git = "https://github.com/mmphego/adk-python", rev = "fix/pydantic-v2-swagger-ui", extra = "a2a" }

[project.optional-dependencies]
a2a = ["google-adk"]

