[project]
name = "strands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=1.0.6",
    "strands-agents>=1.16.0",
]

[dependency-groups]
dev = [
    "strands-agents-builder>=0.1.10",
    "strands-agents-tools[a2a-client]>=0.2.15",
]
